add previous version files

--- a/src/_includes/navigation.njk
+++ b/src/_includes/navigation.njk
@@ -3,5 +3,7 @@
   <div class="site-title"><h1>{{siteTitle}}</h1></div>
   <ul>
     <li><a class="nav-item" href="/">home</a></li>
+    <li><a class="nav-item" href="/blah">blah</a></li>
+    <li><a class="nav-item" href="/2blah">2 blah</a></li>
   </ul>
 </nav>
