--- a/src/_layouts/pageTemplates/base.njk
+++ b/src/_layouts/pageTemplates/base.njk
@@ -1,5 +1,5 @@
 ---
-siteTitle: Your Site Title Here
+siteTitle: Chris Stein Portfolio
 
 ---
 <!doctype html>
@@ -34,7 +34,8 @@ siteTitle: Your Site Title Here
     </main>
 
     <footer class="site-footer">
-      <!-- Add your footer content here -->
+      Copyright Chris
+      <!-- Add your footer content here s-->
     </footer>
   
     <!-- Load CDN version of jQuery. For other versions visit this page: https://code.jquery.com/jquery/ -->
