--- a/src/_includes/navigation.njk
+++ b/src/_includes/navigation.njk
@@ -1,9 +1,13 @@
 <!-- REPLACE THIS WITH YOUR NAV -->
 <nav class="site-nav">
-  <div class="site-title"><h1>{{siteTitle}}</h1></div>
-  <ul>
-    <li><a class="nav-item" href="/">home</a></li>
-    <li><a class="nav-item" href="/blah">blah</a></li>
-    <li><a class="nav-item" href="/2blah">2 blah</a></li>
-  </ul>
+  <div class="site-title">
+    <a href="/">Site title and/or Logo</a>
+  </div>
+  <a href="#" class="hamburger" id="nav-toggle"><span></span></a>
+  <div class="links" id="nav-links">
+    <a href="" class="underline">Link 1</a>
+    <a href="">Link 2</a>
+    <a href="">Link 3</a>
+    <a href="">Link 4</a>
+  </div>
 </nav>
